fix animation iphone

--- a/style.css
+++ b/style.css
@@ -1066,13 +1066,13 @@ textarea {
 @-webkit-keyframes focus-in-expand {
     0% {
         letter-spacing: -0.5em;
-        -webkit-filter: blur(12px);
+        /* -webkit-filter: blur(12px); */
         filter: blur(12px);
         opacity: 0;
     }
 
     100% {
-        -webkit-filter: blur(0px);
+        /* -webkit-filter: blur(0px); */
         filter: blur(0px);
         opacity: 1;
     }
